--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=yhte44dyfu7guyfyf87gu
-GOOGLE_APPLICATION_CREDENTIALS=mysecuredcloudstorage-5bfddca24eed.json
+GOOGLE_APPLICATION_CREDENTIALS="C:\Users\BlackAngel\Downloads\mysecuredcloudstorage-5bfddca24eed.json"
 BUCKET_NAME=mysecuredbucket
